test/expected/explain_main_fipc_i.out
explain int main( int, char* )
                           ^
28: error: invalid main() parameter type; must be pointer to pointer to [const] char
